Standardize quotes and remove unnecessary escapes in config files
This commit addresses inconsistencies in quote usage and removes unnecessary escape characters within various configuration files.

The changes include:

- Replacing single quotes with double quotes for SDK version constraints in `pubspec.yaml` files.
- Removing unnecessary escape characters from file paths and commands in `dartdoc_options.yaml` and `analysis_options.yaml`.
- Updating the `dependabot.yaml` and GitHub Actions workflow files to use consistent formatting.

These changes improve the readability and maintainability of the configuration files.

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,13 +3,13 @@ version: 2
 
 updates:
   # Enable weekly pubspec.yaml dependencies checks.
-  - package-ecosystem: "pub"
-    directory: "/"
+  - package-ecosystem: pub
+    directory: /
     schedule:
-      interval: "weekly"
-      day: "sunday"
+      interval: weekly
+      day: sunday
     labels:
-      - "type-infra"
+      - type-infra
 
   # Maintain dependencies for GitHub Actions.
   - package-ecosystem: github-actions
