--- a/testing/test_package_tool_error/dartdoc_options.yaml
+++ b/testing/test_package_tool_error/dartdoc_options.yaml
@@ -1,5 +1,5 @@
 dartdoc:
   tools:
     drill:
-      command: ["bin/drill.dart"]
-      description: "Puts holes in things."
+      command: [bin/drill.dart]
+      description: Puts holes in things.
