--- a/dartdoc_options.yaml
+++ b/dartdoc_options.yaml
@@ -1,4 +1,4 @@
 dartdoc:
   linkToSource:
-    root: '.'
-    uriTemplate: 'https://github.com/dart-lang/dartdoc/blob/v8.3.4-wip/%f%#L%l%'
+    root: .
+    uriTemplate: https://github.com/dart-lang/dartdoc/blob/v8.3.4-wip/%f%#L%l%
