--- a/testing/test_package/pubspec.yaml
+++ b/testing/test_package/pubspec.yaml
@@ -7,6 +7,6 @@ dependencies:
   meta: ^1.4.0
   args: ^2.0.0
   test_package_imported:
-    path: "../test_package_imported"
+    path: ../test_package_imported
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: ">=2.19.0 <3.0.0"
