--- a/testing/test_package_sanitize_html/pubspec.yaml
+++ b/testing/test_package_sanitize_html/pubspec.yaml
@@ -3,4 +3,4 @@ homepage: http://github.com/dart-lang
 description: Worst package ever.
 version: 0.0.1
 environment:
-  sdk: '>=2.14.0-0 <3.0.0'
+  sdk: ">=2.14.0-0 <3.0.0"
